application-manifests/kube-manifests/01-DEVOPS-Nginx-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-devops-deployment
  labels:
    app: eks-devops
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-devops
  template:
    metadata:
      labels:
        app: eks-devops
    spec:
      containers:
        - name: eks-devops
          image: 637423185685.dkr.ecr.us-east-1.amazonaws.com/eks-devops-nginx:2024-12-20.13.58.23.4af87465
          ports:
            - containerPort: 80
